Remove autocomplete in forms and avoid overflow in table actions

--- a/fe/src/css/main.scss
+++ b/fe/src/css/main.scss
@@ -713,3 +713,8 @@ table {
     display: flex;
     justify-content: center;
 }
+
+.no-overflow {
+    display: flex;
+    min-width: 0;
+}
